// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can extend an interface 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

/**
 * MyInterface
 */
export interface MyInterface {
  /**
   * A directory tree that may contain *.ts files that can be referenced from your projenrc typescript file.
   * @default "projenrc"
   * @stability experimental
   */
  readonly projenCodeDir?: string;
  /**
   * The name of the projenrc file.
   * @default ".projenrc.ts"
   * @stability experimental
   */
  readonly filename?: string;
}
"
`;

exports[`can mixin a struct 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

/**
 * MyInterface
 */
export interface MyInterface {
  /**
   * A directory tree that may contain *.ts files that can be referenced from your projenrc typescript file.
   * @default "projenrc"
   * @stability experimental
   */
  readonly projenCodeDir?: string;
  /**
   * The name of the projenrc file.
   * @default ".projenrc.ts"
   * @stability experimental
   */
  readonly filename?: string;
}
"
`;

exports[`can mixin another projen struct 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

/**
 * MyInterface
 */
export interface MyInterface {
  /**
   * The name of the projenrc file.
   * @default ".projenrc.ts"
   * @stability experimental
   */
  readonly filename?: string;
  /**
   * A directory tree that may contain *.ts files that can be referenced from your projenrc typescript file.
   * @default "projenrc"
   * @stability experimental
   */
  readonly projenCodeDir?: string;
}
"
`;

exports[`can update props 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

/**
 * MyInterface
 */
export interface MyInterface {
  /**
   * New summary
   * @default "projenrc"
   * @stability stable
   */
  readonly projenCodeDir: string;
  /**
   * The name of the projenrc file.
   * @default ".projenrc.ts"
   * @stability experimental
   */
  readonly filename?: string;
}
"
`;
